fixed vertical align

--- a/styles/atom-clock.less
+++ b/styles/atom-clock.less
@@ -5,7 +5,7 @@
   display: inline-block;
   margin-left: @component-padding;
   position: relative;
-
+  vertical-align: middle;
   .icon:before {
     .icon-size(14px);
     top: 1px;
